<resources>
    <string name="app_name">Colada</string>
    <string name="sign_up" translatable="false">Masuk/Daftar</string>
    <string name="text_apply_loan">Ajukan pinjaman</string>
    <string name="text_want_amount">Silakan pilih jumlah pinjaman</string>
    <string name="text_want_time">Berapa lama Anda ingin meminjam?</string>
    <string name="text_should_pay">Total Pinjaman</string>
    <string name="text_apply_info">Informasi aplikasi</string>
    <string name="text_apply_amount">Jumlah aplikasi</string>
    <string name="text_apply_time">Istilah pinjaman</string>
    <string name="text_bank">Bank penerima</string>
    <string name="text_bank_card">Akun koleksi</string>
    <string name="text_borrow_hint">*Apakah akan mengkonfirmasi pinjaman</string>
    <string name="text_delay_hint">Kesulitan melunasi? Coba fitur perpanjangan</string>
    <string name="title_mine">Saya</string>
    <string name="text_login">Masuk</string>
    <string name="text_item_my_loan">Pinjaman saya</string>
    <string name="text_item_help_center">Pusat bantuan</string>
    <string name="text_item_customer_service">Pusat layanan pelanggan</string>
    <string name="text_item_setting">Pengaturan</string>
    <string name="dialog_text_pay_method">Silahkan pilih metode pembayaran</string>
    <string name="top_text_status_9">Jumlah pinjaman sedang dikalkulasi, perbarui laman untuk melihat</string>
    <string name="top_text_status_4">Pinjaman Anda telah tersedia, silahkan meminjam</string>
    <string name="top_text_status_4_no_amount">Maaf, Saat ini anda tidak mendapatkan kenaikan limit.</string>
    <string name="btn_text_confirm">Konfirmasi</string>
    <string name="btn_text_extend_pay">Perpanjang tanggal pembayaran</string>
    <string name="top_text_check">Dalam peninjauan, harap bersabar</string>
    <string name="top_text_fangkuan">Dalam pencarian</string>
    <string name="btn_text_shenhe">Sedang ditinjau</string>
    <string name="btn_text_fangkuan">Pinjaman</string>
    <string name="btn_text_go_pay">Lunasi Sekarang</string>
    <string name="btn_text_go_delay_pay">Perpanjang Jatuh Tempo</string>
    <string name="toast_text_refresh">Harap tarik ke bawah untuk menyegarkan</string>
    <string name="toast_text_relogin">Login ulang</string>
    <string name="apply_text_user_info">Informasi pribadi</string>
    <string name="apply_text_company">Informasi pekerjaan</string>
    <string name="apply_text_contact">Informasi kontak</string>
    <string name="apply_text_upload">Unggah foto</string>
    <string name="btn_text_submit">Konfirmasi</string>
    <string name="title_text_apply_info">Daftar aplikasi</string>
    <string name="login_hint_mobile">Silahkan masukkan no ponsel anda</string>
    <string name="login_hint_SMS_code">Silahkan masukkan kode sms</string>
    <string name="login_btn_get_SMS_code">Dapatkan Kode</string>
    <string name="login_text_privacy">Klik login make anda telah menyetujui \n《Perjanjian Layanan Registrasi dan Privasi》</string>
    <string name="login_text_Privasi">《Perjanjian Layanan Registrasi dan Privasi》</string>
    <string name="login_text_send_again">Kirim ulang</string>
    <string name="sms_code_unreceived_tips">Tidak menerima kode sms? Coba lagi atau alihkan mode pesawat, Atau hubungi Whatsapp kami di +62 81290324175</string>
    <string name="privacy_policy">Kebijakan privasi</string>
    <string name="register_policy">Perjanjian pendaftaran</string>
    <string name="text_perjanjian_pinjaman">Dengan mengklik pinjaman, Anda menyetujui</string>
    <string name="link_perjanjian_pinjaman">《Perjanjian Pinjaman》</string>
    <string name="apply_toast_text_1">Harap verifikasi informasi pribadi Anda terlebih dahulu</string>
    <string name="apply_toast_text_2">Harap verifikasi informasi organisasi Anda terlebih dahulu</string>
    <string name="apply_toast_text_3">Harap verifikasi informasi kontak terlebih dahulu</string>
    <string name="apply_toast_text_has_done">Sertifikasi selesai</string>
    <string name="home_text_has_delay">Terlambat</string>
    <string name="day">Hari</string>
    <string name="logout_hint">Tekan lagi untuk keluar dari program</string>
    <string name="text_submit_success">Berhasil dikirim!</string>
    <string name="text_submit_failed">Pengiriman gagal</string>
    <string name="text_submit_failed_and_try">Pengiriman gagal,Silahkan coba lagi nanti</string>
    <string name="text_refresh_and_try_again">Harap segarkan dan coba lagi</string>
    <string name="toast_text_get_privacy_failed">Gagal memuat</string>
    <string name="toast_input_phone_num">Silahkan masukkan nomor ponsel Anda</string>
    <string name="err_network_error">Kesalahan jaringan</string>
    <string name="toast_msg_send_success">Kode verifikasi SMS berhasil dikirim</string>
    <string name="toast_msg_send_failed">Kode verifikasi SMS gagal dikirim</string>
    <string name="toast_login_success">Login berhasil</string>
    <string name="toast_login_failed_try_again">Gagal masuk, Silahkan coba lagi</string>
    <string name="network_get_failed">Permintaan gagal</string>
    <string name="feedback_your_question">Silahkan isi pertanyaan Anda</string>
    <string name="feedback_your_300">Tidak lebih dari 300 kata</string>
    <string name="title_feedback">Umpan balik</string>
    <string name="title_setting">Tetapkan nilai</string>
    <string name="text_about_us">Tentang kami</string>
    <string name="text_logout">Logout</string>
    <string name="text_check_new_version">Periksa versi baru</string>
    <string name="text_already_newest">Versi terbaru saat ini</string>
    <string name="text_ok">Oke</string>
    <string name="text_refresh">Perbarui</string>
    <string name="text_cancel">Batalkan</string>
    <string name="title_about">Tentang</string>
    <string name="dialog_logout_confirm">Konfirmasikan keluar？</string>
    <string name="toast_pls_input_right_phone_num">Silahkan masukkan nomor ponsel yang benar</string>
    <string name="text_send_again">Kirim ulang</string>
    <string name="dialog_pls_input_turing_code">Silahkan masukkan kode verifikasi gambar</string>
    <string name="dialog_confirm">Oke</string>
    <string name="dialog_cancel">Batalkan</string>
    <string name="dialog_no_amount_type_11">Tidak mendapatkan jumlah</string>
    <string name="text_review_refused">@string/top_text_status_4_no_amount</string>
    <string name="text_pls_input">Silahkan masuk</string>
    <string name="text_only_letters_allowed">Hanya surat yang diizinkan</string>
    <string name="title_register_privacy">Kebijakan privasi</string>
    <string name="text_delay_fee">Biaya perpanjangan:</string>
    <string name="dialog_loading">Memuat...</string>
    <string name="text_liveness_btn">Mulai verifikasi</string>
    <string name="text_liveness_hint">Arahkan wajah Anda ke layar ponsel dan pastikan ada pencahayaan yang cukup</string>
    <string name="text_liveness_hint1">Harap tetap diam</string>
    <string name="text_liveness_hint2">*Harap pastikan diri Anda sendiri yang melakukan operasi ini.</string>
    <string name="text_liveness_hint3">Silahkan letakkan wajah Anda di tengah</string>
    <string name="text_liveness_hint4">Harap menjauh dari sedikit</string>
    <string name="string_liveness_has_face_and_holdstill_hint">Tolong jangan bergerak</string>
    <string name="string_liveness_no_face_hint">Silahkan letakkan wajah Anda di tengah</string>
    <string name="liveness_face_not_valid_hint">Harap menjauh dari sedikit</string>
    <string name="allow_permission_and_try_again">Harap beri otorisasi dan coba lagi</string>
    <string name="text_delay_time">Batas waktu \npembayaran ini</string>
    <string name="text_no_pay_way">Tidak ada saluran pembayaran</string>
    <string name="text_part_pay_hint_min">Jumlah pembayaran minimum tidak boleh kurang dari Rp.100,000</string>
    <string name="text_part_pay_hint_max">Jumlahnya sudah terlampaui, Silahkan masukkan kembali</string>
    <string name="text_part_pay_hint">Silahkan masukkan jumlah pelunasan (Rp) yang diinginkan</string>
    <string name="text_part_pay_should_pay">Jumlah jatuh tempo：</string>
    <string name="text_part_pay_btn">Lunasi Sebagian</string>
    <string name="text_part_pay">Pembayaran sebagian</string>
    <string name="text_analysis_failed">Verifikasi gagal, Silahkan coba lagi</string>
    <string name="text_try_again">Coba lagi</string>
    <string name="text_liveness_success">Selamat！ Analisa berhasil</string>
    <string name="toast_7_days_only">Saat ini hanya menyediakan tenor selama 7 hari</string>
    <string name="text_home_tip">Jika Anda dapat melunasi pinjaman tepat waktu, aplikasi Anda berikutnya akan mendapatkan batas pinjaman atau jangka waktu pinjaman yang lebih tinggi.</string>
    <string name="text_remind_review_time">Waktu peninjuan kami adalah pukul 08:30 sampai 17:30.Jika anda mengajukan pinjaman lebih dari pukul 17:30, kita akan proses pinjaman anda di esok hari.</string>
    <string name="text_remind_answer_the_phone">Analis kami akan tinjau data anda hari ini atau akan Bungin anda besok. Harap di perhatikan telfon yang masuk.</string>
    <string name="text_remind_company_info">Catatan:\nInformasi pekerjaan hanya digunakan sebagai informasi sertifikasi, kami tidak akan menghubungi perusahaan Anda.</string>
    <string name="text_remind_contact_info">Catatan:\nInformasi kontak hanya digunakan untuk keperluan otentikasi. Kami tidak akan menghubungi kontak-kontak Anda.</string>
    <string name="text_remind_bank_info_page">Catatan:\nRekening bank ini untuk Anda menerima pinjaman, silakan isi kartu bank Anda sendiri.</string>
    <string name="permission_desc">Yth, agar dapat melayani dengan cepat, tepat dan Berkualitas, silahkan memberikan otorisasi hak akses Mobile Aplikasi :</string>
    <string name="permission_cancel">Tolak</string>
    <string name="permission_confirm">Setuju</string>
    <string name="permission_confirm2"><b>Colada</b> Kebijakan Privasi</string>
</resources>