<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.cocotreedebug.android.ui.activity.PartPayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_home_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:background="@drawable/icon_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_titlebar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:maxWidth="200dp"
            android:maxLines="1"
            android:text="@string/text_part_pay"
            android:textColor="#212121"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_part_pay_hint"
        android:textColor="@color/text_black"
        android:textSize="16sp" />


    <RelativeLayout
        android:id="@+id/ll_msg_verify_code"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="22dp">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="bottom|center"
            android:padding="5dp"
            android:text="Ubah"
            android:textColor="@color/theme_color"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_part_pay_amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/tv_edit"
            android:background="@null"
            android:hint="100,000"
            android:inputType="numberDecimal"
            android:maxLength="9"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"

            android:singleLine="true"
            android:textColor="@color/CommonTextColor"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/app_divide_line2" />
    </RelativeLayout>


    <TextView
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_part_pay_hint_min"
        android:textColor="@color/Grey400"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_part_pay_should_pay"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_total_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_black"
            android:textSize="16sp"
            tools:text="Rp.428,000" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:enabled="false"
        android:layout_marginRight="30dp"
        android:background="@drawable/slt_btn_corner5_theme_color"
        android:gravity="center"
        android:minHeight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/text_part_pay_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>
