<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cocotree.android.ui.activity.StartLivenessActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Liveness Check"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>


    <ImageView
        android:id="@+id/iv_center_image"
        android:layout_width="180dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@drawable/bg_start_liveness" />

    <TextView
        android:id="@+id/tv_hint_text_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="27dp"
        android:layout_marginRight="30dp"
        android:text="@string/text_liveness_hint"
        android:textColor="@color/theme_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="110dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/slt_btn_corner5_theme_color"
        android:gravity="center"
        android:text="@string/text_liveness_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/tv_hint_text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="30dp"
        android:text="@string/text_liveness_hint2"
        android:textColor="@color/theme_color"
        android:textSize="14sp" />
</LinearLayout>
