<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.FeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_feedback_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_feedback"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:visibility="gone"
        android:text="@string/feedback_your_question"
        android:textColor="@color/text_black"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:editable="false"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_bg_feedback"
        android:gravity="start|center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/grey_text_color"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/shape_bg_feedback"
        android:gravity="start"
        android:hint="@string/feedback_your_question"
        android:padding="15dp"
        android:textColor="@color/grey_text_color"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/slt_btn_circle_corner_theme_color"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/btn_text_submit"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>