<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_closed_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/permission_head" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#efefef"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/permission_desc"
            android:textColor="#3c3d49"
            android:textSize="14sp" />


        <ListView
            android:id="@+id/lv_permission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:divider="@null" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_cancel_btn"
                android:text="@string/permission_cancel"
                android:textAllCaps="false"
                android:textColor="#2c64be"
                android:textSize="18sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/dialog_confirm_btn"
                android:text="@string/permission_confirm"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>
</LinearLayout>