<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.AboutUsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="@drawable/icon_back" />

        <TextView
            android:id="@+id/tv_titlebar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_about"
            android:textColor="#000000"
            android:textSize="18sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:text="@string/app_name"
        android:textColor="#666666"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_current_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="18dp"
        android:textColor="#666666"
        android:textSize="16sp"
        tools:text="Version ***" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/app_divide_line" />

    <RelativeLayout
        android:id="@+id/rl_version_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_list_height"
        android:background="@drawable/slt_common_item">

        <TextView
            android:id="@+id/tv_version_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="@string/text_check_new_version"
            android:textColor="@color/CommonTextColor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_arrow_right_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/arrow_right_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/app_divide_line" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_rate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_list_height"
        android:background="@drawable/slt_common_item"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:text="给我评分"
            android:textColor="@color/CommonTextColor"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_arrow_right_gray2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/arrow_right_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/app_divide_line" />
    </RelativeLayout>

</LinearLayout>